Creé categorias para las portadas de péliculas

--- a/estilos.css
+++ b/estilos.css
@@ -19,3 +19,11 @@ h2{
     font-family: 'Poppins', sans-serif;
     color: #fff;
 }
+
+h1{
+    color: #181717f0;
+}
+
+#espacio{
+    color: #181717f0;
+}
