--- a/botones.css
+++ b/botones.css
@@ -18,9 +18,14 @@ header{
 }
 
 .logo{
+    display: flex;
+    justify-content: center;
     font-size: 2em;
-    color: #fff;
+    color: #000;
     user-select: none;
+    background-color: #c01818;
+    line-height: 80px;
+    width: 330px;
 }
 
 .navigation{
@@ -42,8 +47,9 @@ button{
     text-decoration: none;
     height: 50PX;
     width: 120px;
-    background-color: yellow;
+    background-color: rgb(192, 25, 25);
     color: #000;
+    
 }
 
 .btn-entrar{
@@ -60,7 +66,7 @@ a{
 }
 
 .espacio{
-    color: black;
+    color: transparent;
 }
 
 input{
