--- a/botones.css
+++ b/botones.css
@@ -15,6 +15,7 @@ header{
 }
 
 .logo{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     display: flex;
     justify-content: center;
     font-size: 2em;
@@ -22,11 +23,16 @@ header{
     user-select: none;
     background-color: #c01818;
     line-height: 80px;
-    width: 330px;
+    width: 230px;
+}
+
+.ayuda{
+    color: #fff;
 }
 
 .logo:hover{
     background-color: blue;
+    box-shadow: 13px 13px 13px rgb(0, 238, 255);
 }
 
 .navigation{
@@ -46,6 +52,7 @@ button{
 
 .gris:hover{
     background-color: rgb(192, 25, 25);
+    box-shadow: 13px 13px 37px #fff;
 }
 
 .btn-regis{
@@ -54,11 +61,11 @@ button{
     width: 120px;
     background-color: rgb(192, 25, 25);
     color: #000;
-    
 }
 
 .btn-regis:hover{
     background-color: blue;
+    box-shadow: 13px 13px 13px rgb(0, 238, 255);
 }
 
 .btn-entrar{
@@ -68,10 +75,14 @@ button{
     background-color: rgb(0, 0, 0);
     color: #fff;
 }
+.btn-entrar:hover{
+    color: black;
+    background-color: rgb(192, 25, 25);
+    box-shadow: 13px 13px 37px 13px #fff;
+}
 
 a{
     text-decoration: none;
-    color: #fff;
 }
 
 .espacio{
@@ -82,14 +93,8 @@ input{
     background-color: rgba(44, 41, 41, 0.979);
     margin: auto;
 }
-body{
-    background-color: rgba(0, 0, 0, 0.904);
-}
 
-.btn-entrar:hover{
-    color: black;
-    background-color: rgb(192, 25, 25);
-}
+
 
 @media (max-width: 1385px){
     .estreno{
